# Seo-Agents

./: .gitignore  README.md  crew_log.txt  pyproject.toml
optimized_blog_posts/: optimized_Stevie_Kim_Blog_Post_1.html  optimized_Stevie_Kim_Blog_Post_3.html  optimized_ai_everywhere.html  optimized_crewai_and_me_part_2.html  optimized_real_estate_investing.html
reports/: analysis_report.md  blog_post_rewrite.md  seo_report.md
seo/: SEO_Report_2025.md  Stevie_Kim_Blog_Post_1.html  Stevie_Kim_Blog_Post_2.html  Stevie_Kim_Blog_Post_3.html  ai_everywhere.html  crewai-and-me-part-2.html  crewai_and_me_part_2.html  decided_Stevie_Kim_Blog_Post_1.md  decided_Stevie_Kim_Blog_Post_2.md  decided_Stevie_Kim_Blog_Post_3.md  decided_suggestions_Stevie_Kim_Blog_Post_1.md  decided_suggestions_Stevie_Kim_Blog_Post_2.md  decided_suggestions_Stevie_Kim_Blog_Post_3.md  post1.html  post2.html  post3.html  real-estate-investing-protect-your-roi-by-planning-ahead.html  real_estate_investing.html  seo_Learning_and_Reflecting_On_Essentialism_by_Greg_McKeown.md  suggestions_AI_Everywhere_Just_Because_We_Can.md  suggestions_Real_Estate_Investing_Protect_Your_ROI.md  suggestions_Stevie_Kim_Blog_Post_1.md  suggestions_Stevie_Kim_Blog_Post_2.md  suggestions_Stevie_Kim_Blog_Post_3.md  suggestions_ai_everywhere.md  suggestions_crewai_and_me_part_2.md  suggestions_post1.md  suggestions_post2.md  suggestions_post3.md  suggestions_real_estate_investing.md
src/seo_agents_crew/: agent_thoughts  crew.py  main.py
src/seo_agents_crew/config/: agents.yaml  tasks.yaml
(+2 files in other folders)
